@@ -208,4 +208,7 @@ Rename = Rename
 Language = Language
 Key = Key:
 RenKey = Change key
+InvKey = Invalid key.
+DupKey = The specified key is already in use in the library.
+SpaceKey = The key must not contain spaces.
 SnapToGridOrigin = Snap origin on grid
