@@ -197,7 +197,6 @@ Add_node = 增加节点
 Remove_node = 删除节点
 Shift_cp = 复制/粘贴绘图元件时错开
 
-Library = Library
 Library = Library:
 Group = Group:
 Name = Name:
@@ -209,4 +208,7 @@ Rename = Rename
 Language = Language
 Key = Key:
 RenKey = Change key
+InvKey = Invalid key.
+DupKey = The specified key is already in use in the library.
+SpaceKey = The key must not contain spaces.
 SnapToGridOrigin = Snap origin on grid
